Edited basic elements like title and teaser video
Added proper title , description and teaser video .

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Palmira - Indiscapesv2</title>
+    <title>SeamFormer</title>
     <!--=================Meta tags==========================-->
     <meta name="robots" content="index,follow" />
     <meta name="description"
-          content="A Deep Deformable Network for Instance Segmentation of Dense and Uneven Layouts in Handwritten Manuscripts" />
+          content="A Multi-Task Vision Transformer Network for Text Line Segmentation of Handwritten Manuscripts" />
     <meta name="keywords"
-          content="instance segmentation, deformable convolutional network, historical document analysis, document image segmentation, dataset" />
+          content="text line segmentation, vision transformers, historical document analysis,high precision,diacritics" />
     <link rel="author" href="https://syzygianinfern0.github.io/" />
     <!--=================js and css==========================-->
 
@@ -93,29 +93,21 @@
             <div class="section head" id="title-section">
                 <h1>
                     <!-- Palm leaf Manuscript Region Annotator -->
-                    <font color="Tomato">PALMIRA</font>:
-                    <font color="Tomato">PA</font>lm
+                    <font color="Tomato">SeamFormer</font>:
+                    <!-- <font color="Tomato">PA</font>lm
                     <font color="Tomato">L</font>eaf
                     <font color="Tomato">M</font>anuscr<font color="Tomato">I</font>pt
                     <font color="Tomato">R</font>egion
-                    <font color="Tomato">A</font>nnotator
+                    <font color="Tomato">A</font>nnotator -->
                 </h1>
                 <h1>
-                    A Deep Deformable Network for Instance Segmentation of Dense and Uneven Layouts in Handwritten
-                    Manuscripts
+                    High Precision Text Line Segmentation for Handwritten Documents 
                 </h1>
                 <!--=================Authors==========================-->
                 <div class="authors">
-                    <a href="https://syzygianinfern0.github.io/" target="_blank">S. P. Sharan</a>
+                    <a href="mailto:niharika.vadlamudi@research.iiit.ac.in" target="_blank">Niharika Vadlamudi</a>
                     &nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="mailto:sowmya.aitha@research.iiit.ac.in" target="_blank">Sowmya Aitha</a>
-                    &nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="mailto:kraju3998@gmail.com" target="_blank">Amandeep Kumar</a>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <br />
-                    <a href="mailto:abhishek.trivedi@research.iiit.ac.in" target="_blank">Abhishek Trivedi</a>
-                    &nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="mailto:aaron.saju@students.iiit.ac.in" target="_blank">Aaron Augustine</a>
+                    <a href="mailto:rahulkris250102@gmail.com" target="_blank">Rahul Krishna</a>
                     &nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="https://ravika.github.io/" target="_blank">Ravi Kiran Sarvadevabhatla</a>
                 </div>
@@ -125,7 +117,7 @@
                     <!-- <sup>3</sup> Uni 3 -->
                 </div>
                 <div class="venue">
-                    To appear at <a href="https://icdar2021.org/">ICDAR 2021</a>
+                    To appear at <a href="https://icdar2023.org">ICDAR 2023</a>
                 </div>
                 <!--=================Tabs==========================-->
                 <ul id="tabs">
@@ -153,7 +145,7 @@
                 <center>
                     <div class="vid-border">
                     <video id="my_video_1" class="video-js vjs-default-skin" controls poster="assets//Palmira - Slides.png" preload="none" data-setup='{ "aspectRatio":"1920:1080", "playbackRates": [1, 1.5, 2] }'>
-                            <source src="assets/Palmira - Slides.mp4" type='video/mp4' />
+                            <source src="assets/7741-TEASER.mp4" type='video/mp4' />
                     </video>
                     </div>
                 </center>
@@ -356,12 +348,12 @@
                 <div class="section citation" ,=, id="citation">
                     <h2>Citation</h2>
                     <div class="section bibtex">
-                        <pre>@inproceedings{sharan2021palmira,
-    title = {PALMIRA: A Deep Deformable Network for Instance Segmentation of Dense and Uneven Layouts in Handwritten Manuscripts},
-    author = {Sharan, S P and Aitha, Sowmya and Amandeep, Kumar and Trivedi, Abhishek and Augustine, Aaron and Sarvadevabhatla, Ravi Kiran},
+                        <pre>@inproceedings{,
+    title = {SeamFormer: High Precision Text Line Segmentation for Handwritten Documents},
+    author = {Vadlamudi,Niharika and Rahul,Krishna and Sarvadevabhatla, Ravi Kiran},
     booktitle = {International Conference on Document Analysis and Recognition,
-               {ICDAR} 2021},
-    year = {2021},
+               {ICDAR} 2023},
+    year = {2023},
 }</pre>
                     </div>
                 </div>
