--- a/index.html
+++ b/index.html
@@ -92,16 +92,7 @@
         <div id="content-inner">
             <div class="section head" id="title-section">
                 <h1>
-                    <!-- Palm leaf Manuscript Region Annotator -->
-                    <font color="Tomato">SeamFormer</font>:
-                    <!-- <font color="Tomato">PA</font>lm
-                    <font color="Tomato">L</font>eaf
-                    <font color="Tomato">M</font>anuscr<font color="Tomato">I</font>pt
-                    <font color="Tomato">R</font>egion
-                    <font color="Tomato">A</font>nnotator -->
-                </h1>
-                <h1>
-                    High Precision Text Line Segmentation for Handwritten Documents 
+                    SeamFormer : High Precision Text Line Segmentation for Handwritten Documents 
                 </h1>
                 <!--=================Authors==========================-->
                 <div class="authors">
