Updating the index.html
Adding the video thumbprint

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="section">
                 <center>
                     <div class="vid-border">
-                    <video id="my_video_1" class="video-js vjs-default-skin" controls poster="assets//SF-Slides-Page.png" preload="none" data-setup='{ "aspectRatio":"1920:1080", "playbackRates": [1, 1.5, 2] }'>
+                    <video id="my_video_1" class="video-js vjs-default-skin" controls poster="assets/SF-Slides-Page.png" preload="none" data-setup='{ "aspectRatio":"1920:1080", "playbackRates": [1, 1.5, 2] }'>
                             <source src="assets/7741-TEASER.mp4" type='video/mp4' />
                     </video>
                     </div>
