Rearranged the folder contents for clarity
Added full scale architecture

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
             <br />
             <!--=================Teasers==========================-->
             <div id="img_intro_examples" class="img_container">
-                <a data-magnify="gallery" data-caption="PALMIRA Architecture" href="./assets/Architecture_final.jpg">
+                <a data-magnify="gallery" data-caption="PALMIRA Architecture" href="./assets/sf/Combined_Diagram.jpg">
                     <img style="padding-left: 1rem;" src="./assets/magnifier-icon.png" border="0" width="5%" height="5%" />
-                    <center><img src="./assets/Architecture_final.jpg" border="0" width="90%" /></center>
+                    <center><img src="./assets/sf/Combined_Diagram.jpg" border="0" width="90%" /></center>
                 </a>
             </div>
             <div class="section">
@@ -135,8 +135,8 @@
             <div class="section">
                 <center>
                     <div class="vid-border">
-                    <video id="my_video_1" class="video-js vjs-default-skin" controls poster="assets/SF-Slides-Page.png" preload="none" data-setup='{ "aspectRatio":"1920:1080", "playbackRates": [1, 1.5, 2] }'>
-                            <source src="assets/7741-TEASER.mp4" type='video/mp4' />
+                    <video id="my_video_1" class="video-js vjs-default-skin" controls poster="assets/sf/SF-Slides-Page.png" preload="none" data-setup='{ "aspectRatio":"1920:1080", "playbackRates": [1, 1.5, 2] }'>
+                            <source src="assets/sf/7741-TEASER.mp4" type='video/mp4' />
                     </video>
                     </div>
                 </center>
