--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
             <br />
             <!--=================Teasers==========================-->
             <div id="img_intro_examples" class="img_container">
-                <a data-magnify="gallery" data-caption="PALMIRA Architecture" href="/assets/sf/Stage1and2.jpg">
+                <a data-magnify="gallery" data-caption="PALMIRA Architecture" href="./assets/sf/Stage1and2.jpg">
                     <img style="padding-left: 1rem;" src="./assets/magnifier-icon.png" border="0" width="5%" height="5%" />
-                    <center><img src="/assets/sf/Stage1and2.jpg" border="0" width="90%" /></center>
+                    <center><img src="./assets/sf/Stage1and2.jpg" border="0" width="90%" /></center>
                 </a>
             </div>
             <div class="section">
