Added Paper Thumbnails, Github Links , Paper Links
Removed Palmira related content .

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
             <!--=================Dataset==========================-->
             <div class="section" ,=, id="dataset">
-                <h2>Dataset</h2>
+                <h2>Glimpse of Dataset</h2>
                 <br />
                 <a data-magnify="gallery" data-caption="Indiscapes2" href="./assets/Indiscapes2.jpg">
                     <img style="padding-left: 1rem;" src="./assets/magnifier-icon.png" border="0" width="5%" height="5%" />
@@ -220,7 +220,7 @@
                     </center>
                 </a>
                 <p>
-                    Representative manuscript images from Indiscapes2
+                    Representative manuscript images from South Asian Palm Leaf Manuscripts 
                     <ul>
                         <li>
                             <i><font color="Tomato">(Newly added)</font></i> <b>ASR</b> (top left, pink dotted line)
@@ -251,20 +251,17 @@
                         <td width="50%" valign="middle">
                             <center>
                                 <a href="https://arxiv.org/abs/2108.09436" target="_blank"
-                                   class="imageLink"><img src="./assets/Paper-Thumbnail-Crop.jpg" ,=, width="75%" /></a><br /><br />
-                                <a href="https://arxiv.org/abs/2108.09436" target="_blank">Paper</a>
-                                <!--
-                                <a href="https://drive.google.com/file/d/163h9c30sWuxw2VxcmEwvUMnjHzJk8lNE/view?usp=sharing" target="_blank">Paper</a>
-                                -->
+                                   class="imageLink"><img src="./assets/sf/page_layout.png" ,=, width="75%" /></a><br /><br />
+                                <a href="https://drive.google.com/file/d/1UU_4irR3m8IuuzuOXYl35eK6UbD2d3tH/view?usp=sharing" target="_blank">Paper</a>
                             </center>
 
                         </td>
 
                         <td width="50%" valign="middle">
                             <center>
-                                <a href="https://github.com/ihdia/palmira" target="_blank"
+                                <a href="https://github.com/ihdia/seamformer" target="_blank"
                                    class="imageLink"><img src="./assets/icon_github.png" ,=, width="40%" /></a><br /><br />
-                                <a href="https://github.com/ihdia/palmira" target="_blank">Code [PyTorch, Detectron2]</a>
+                                <a href="https://github.com/ihdia/seamformer" target="_blank">Code [PyTorch]</a>
                             </center>
                         </td>
                     </tr>
