Added more details on the document diagrams

--- a/index.html
+++ b/index.html
@@ -211,8 +211,9 @@
 
             <!--=================Dataset==========================-->
             <div class="section" ,=, id="dataset">
-                <h2>Glimpse of Dataset</h2>
+                <h2>South Asian Manuscripts Dataset</h2>
                 <br />
+
                 <a data-magnify="gallery" data-caption="Indiscapes2" href="./assets/Indiscapes2.jpg">
                     <img style="padding-left: 1rem;" src="./assets/magnifier-icon.png" border="0" width="5%" height="5%" />
                     <center>
@@ -223,7 +224,7 @@
                     Representative manuscript images from South Asian Palm Leaf Manuscripts 
                     <ul>
                         <li>
-                            <i><font color="Tomato">(Newly added)</font></i> <b>ASR</b> (top left, pink dotted line)
+                            <b>ASR</b> (top left, pink dotted line)
                         </li>
                         <li>
                             <b>Penn-in-Hand</b> (bottom left, blue dotted line)
@@ -232,11 +233,41 @@
                             <b>Bhoomi</b> (top right, green dotted line)
                         </li>
                         <li>
-                            <i><font color="Tomato">(Newly added)</font></i> <b>Jain</b> (bottom right, brown dotted line)
+                            <b>Jain</b> (bottom right, brown dotted line)
+                        </li>
+                    </ul>
+                </p>
+
+                <a data-magnify="gallery" data-caption="BKS" href="./assets/sf/Fig I _ Degradations.jpg">
+                    <img style="padding-left: 1rem;" src="./assets/magnifier-icon.png" border="0" width="5%" height="5%" />
+                    <center>
+                        <img src="./assets/sf/Fig I _ Degradations.jpg" alt="Indiscapes2" style="width:75%" />
+                    </center>
+                </a>
+                <p>
+                    Representative manuscript images from various South Asian Palm Leaf Manuscript collections.
+                    <ul>
+                        <li>
+                            <b>Sundaneese (Extreme Document Degradations)</b> (first, pink dotted line)
+                        </li>
+                        <li>
+                            <b>Khmer Samples (Low Ink)</b> (second,third)
+                        </li>
+                        <li>
+                            <b>Balineese (Poor Constrast)</b> (fourth from top)
+                        </li>
+                        <li>
+                            <b>Balineese(Multiple Diacritics)</b> (bottom right, brown dotted line)
                         </li>
                     </ul>
                     Note the diversity across collections in terms of document quality, region density, aspect ratio and non-textual elements (pictures).
                 </p>
+
+
+
+
+
+
                 <center>
                     <img src="./assets/Dataset-Stats.jpg" alt="Indiscapes2" style="width:50%" />
                 </center>
@@ -250,13 +281,11 @@
                         </td>
                         <td width="50%" valign="middle">
                             <center>
-                                <a href="https://arxiv.org/abs/2108.09436" target="_blank"
+                                <a href="https://drive.google.com/file/d/1UU_4irR3m8IuuzuOXYl35eK6UbD2d3tH/view?usp=sharing" target="_blank"
                                    class="imageLink"><img src="./assets/sf/page_layout.png" ,=, width="75%" /></a><br /><br />
                                 <a href="https://drive.google.com/file/d/1UU_4irR3m8IuuzuOXYl35eK6UbD2d3tH/view?usp=sharing" target="_blank">Paper</a>
                             </center>
-
                         </td>
-
                         <td width="50%" valign="middle">
                             <center>
                                 <a href="https://github.com/ihdia/seamformer" target="_blank"
