Added the new palm leaf manuscript dataset

--- a/index.html
+++ b/index.html
@@ -238,35 +238,27 @@
                     </ul>
                 </p>
 
-                <a data-magnify="gallery" data-caption="BKS" href="./assets/sf/Fig I _ Degradations.jpg">
+                <a data-magnify="gallery" data-caption="BKS" href="./assets/sf/NEWFig I _ Degradations.jpg">
                     <img style="padding-left: 1rem;" src="./assets/magnifier-icon.png" border="0" width="5%" height="5%" />
                     <center>
-                        <img src="./assets/sf/Fig I _ Degradations.jpg" alt="Indiscapes2" style="width:75%" />
+                        <img src="./assets/sf/NEWFig I _ Degradations.jpg" alt="BKS" style="width:75%" />
                     </center>
                 </a>
                 <p>
                     Representative manuscript images from various South Asian Palm Leaf Manuscript collections.
                     <ul>
                         <li>
-                            <b>Sundaneese (Extreme Document Degradations)</b> (first, pink dotted line)
+                            <b>Sundaneese Manuscript </b> (Extreme Document Degradations , first)
                         </li>
                         <li>
-                            <b>Khmer Samples (Low Ink)</b> (second,third)
+                            <b>Khmer Manuscript </b> Poor Text Contrast (Low Ink) (second,third)
                         </li>
                         <li>
-                            <b>Balineese (Poor Constrast)</b> (fourth from top)
-                        </li>
-                        <li>
-                            <b>Balineese(Multiple Diacritics)</b> (bottom right, brown dotted line)
+                            <b>Balineese Manuscript</b> Poor Document Constrast (fourth from top)
                         </li>
                     </ul>
                     Note the diversity across collections in terms of document quality, region density, aspect ratio and non-textual elements (pictures).
                 </p>
-
-
-
-
-
 
                 <center>
                     <img src="./assets/Dataset-Stats.jpg" alt="Indiscapes2" style="width:50%" />
