Added Result Table

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     </a>
                 </div>
                 <br />
-                <h4>Seam Understanding :  </h3>
+                <h4>SeamFormer In Action !  </h3>
                 <div class="section">
                     <center>
                         <div class="vid-border">
@@ -260,9 +260,8 @@
                     </ul>
                     Note the diversity across collections in terms of document quality, region density, aspect ratio and non-textual elements (pictures).
                 </p>
-
                 <center>
-                    <img src="./assets/Dataset-Stats.jpg" alt="Indiscapes2" style="width:50%" />
+                    <img src="./assets/sf/Results_Table.png" alt="Results_I2_BKS_KG" style="width:50%" />
                 </center>
             </div>
 
@@ -289,16 +288,6 @@
                     </tr>
                 </table>
             </div>
-
-            <!--=================Abstract==========================-->
-            <div class="section abstract">
-                <h2>Abstract</h2>
-                <br />
-                <p>
-                    Handwritten documents are often characterized by dense and uneven layout. Despite advances, standard deep network based approaches for semantic layout segmentation are not robust to complex deformations seen across semantic regions. This phenomenon is especially pronounced for the low-resource Indic palm-leaf manuscript domain. To address the issue, we first introduce Indiscapes2, a new large-scale diverse dataset of Indic manuscripts with semantic layout annotations. Indiscapes2 contains documents from four different historical collections and is $150\%$ larger than its predecessor, Indiscapes. We also propose a novel deep network Palmira for robust, deformation-aware instance segmentation of regions in handwritten manuscripts. We also report Hausdorff distance and its variants as a boundary-aware performance measure. Our experiments demonstrate that Palmira provides robust layouts, outperforms strong baseline approaches and ablative variants. We also include qualitative results on Arabic, South-East Asian and Hebrew historical manuscripts to showcase the  generalization capability of Palmira.
-                </p>
-            </div>
-
             <!--=================Results==========================-->
             <div class="section" ,=, id="results">
                 <h2>Results</h2>
