Added V0 Qualitative Results

--- a/index.html
+++ b/index.html
@@ -290,53 +290,19 @@
             </div>
             <!--=================Results==========================-->
             <div class="section" ,=, id="results">
-                <h2>Results</h2>
+                <h2>Qualitative Results</h2>
                 <!--=================*******==========================-->
-                <h3>1. Indiscapesv2 Test Set - Document Level</h3>
                 <div id="vid4" class="img_container">
-                    Layout predictions by Palmira on representative test set documents from Indiscapes2 dataset. Note that the colors are used to distinguish region instances. The region category abbreviations are present at corners of the regions.
+                    TBD -- Need to add more imgs.
+                    Text Line predictions by SeamFormer on representative test set documents from Indiscapes2 datasets , Balineese , Khmer and Sundaneese datasets.
                     <br />
                     <br />
-                    <a data-magnify="gallery" data-caption="Document Level Performance of PALMIRA" href="./assets/Qualitative-Indiscapesv2-Test.jpg">
+                    <a data-magnify="gallery" data-caption="Line Level Performance of SeamFormer" href="./assets/sf/Net_New_Drawing.jpg">
                         <img style="padding-left: 1rem;" src="./assets/magnifier-icon.png" border="0" width="5%" height="5%" />
                         <center>
                             <div class="leftView">
                                 <div class="mask" style="width:10px;height:70px"></div>
-                                <img class='small' src="./assets/Qualitative-Indiscapesv2-Test.jpg" style="width: 65%;" />
-                            </div>
-                        </center>
-                    </a>
-                </div>
-                <br />
-                <!--=================*******==========================-->
-                <h3>2. Indiscapesv2 Test Set - Region Level Performance </h3>
-                <div id="vid4" class="img_container">
-                    A comparative illustration of region-level performance. Palmira’s predictions are in red. Predictions from the best model among baselines (BoundaryPreserving Mask-RCNN) are in green. Ground-truth boundary is depicted in white.
-                    <br />
-                    <br />
-                    <a data-magnify="gallery" data-caption="Region Level Performance of PALMIRA" href="./assets/Qualitative-Indiscapesv2-Test-RegionLevel.jpg">
-                        <img style="padding-left: 1rem;" src="./assets/magnifier-icon.png" border="0" width="5%" height="5%" />
-                        <center>
-                            <div class="leftView">
-                                <div class="mask" style="width:10px;height:70px"></div>
-                                <img class='small' src="./assets/Qualitative-Indiscapesv2-Test-RegionLevel.jpg" style="width: 65%;" />
-                            </div>
-                        </center>
-                    </a>
-                </div>
-                <br />
-                <!--=================*******==========================-->
-                <h3>3. Other Documents (Out of Dataset)</h3>
-                <div id="vid4" class="img_container">
-                    Layout predictions by Palmira on out-of-dataset handwritten Manuscripts
-                    <br />
-                    <br />
-                    <a data-magnify="gallery" data-caption="Qualitative Results on Other Datasets" href="./assets/Qualitative-Indiscapesv2-Others.jpg">
-                        <img style="padding-left: 1rem;" src="./assets/magnifier-icon.png" border="0" width="5%" height="5%" />
-                        <center>
-                            <div class="leftView">
-                                <div class="mask" style="width:10px;height:70px"></div>
-                                <img class='small' src="./assets/Qualitative-Indiscapesv2-Others.jpg" style="width: 65%;" />
+                                <img class='small' src="./assets/sf/Net_New_Drawing.jpg" style="width: 65%;" />
                             </div>
                         </center>
                     </a>
@@ -346,13 +312,13 @@
                 <div class="section citation" ,=, id="citation">
                     <h2>Citation</h2>
                     <div class="section bibtex">
-                        <pre>@inproceedings{,
-    title = {SeamFormer: High Precision Text Line Segmentation for Handwritten Documents},
-    author = {Vadlamudi,Niharika and Rahul,Krishna and Sarvadevabhatla, Ravi Kiran},
-    booktitle = {International Conference on Document Analysis and Recognition,
-               {ICDAR} 2023},
-    year = {2023},
-}</pre>
+                        <pre>@inproceedings{vadlamudiniharikaSF,
+                            title = {SeamFormer: High Precision Text Line Segmentation for Handwritten Documents},
+                            author = {Vadlamudi,Niharika and Rahul,Krishna and Sarvadevabhatla, Ravi Kiran},
+                            booktitle = {International Conference on Document Analysis and Recognition,
+                                    {ICDAR} 2023},
+                            year = {2023},
+                        }</pre>
                     </div>
                 </div>
                 <!--=================Contact==========================-->
